--- a/wercker.yml
+++ b/wercker.yml
@@ -7,5 +7,8 @@ build:
         name: echo
         code: |
           echo "hello Wercker!"
+    - xenoterracide/maven:
+        goals: clean package -U
+        settings: pom.xml
 
   
